tui/src/views/snapshots/toon_console_tui__views__directory__tests__renders_nothing_read_yet_before_any_fetch.snap
---
source: src/views/directory.rs
expression: "render(&state, NOW_MS, false)"
---
┌ Directory ───────────────────────────────────────────────────────────────────────────────────────┐
│Isolation any  Arch any  GPU any  Hidden both  Grants none                                        │
│i isolation  a arch  g gpu  d/n capability  H hidden  x clear  r refresh  Enter detail            │
│                                                                                                  │
│Nothing read yet.                                                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
